add note to jvm